<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        android:contentDescription="@string/settings_menu"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/maps_menu"
        android:title="@string/maps"
        android:icon="@drawable/maps_logo"
        app:showAsAction="always"
        />


</menu>